--- a/index.html
+++ b/index.html
@@ -1,60 +1,55 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <title>Погода</title>
 
-  <link rel="stylesheet" href="static/main.css">
+  <link rel="stylesheet" href="static/main.css" />
 
- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet" />
 
-<link type="image/png" href="images/free-icon-cloudy-1163763.png" rel="shortcut icon">
+  <link type="image/png" href="images/free-icon-cloudy-1163763.png" rel="shortcut icon" />
 </head>
+
 <body>
-    <div class="headre-img">
-      <img src="images/sun.png" class="sun">
-    </div>
- <header>
-   <div class="header">
+  <div class="headre-img">
+    <img src="images/sun.png" class="sun" />
+  </div>
+  <header>
+    <div class="header">
       <div class="container">
-        <div class="header__iner">
-              <div class="header__logo">Погода в Измире</div>
-              <nav class="nav">
-                <a class="nav__link" href="#">На завтра</a>
-                <a class="nav__link" href="#">На неделю</a>
-                <a class="nav__link" href="#">О нас</a>
-              </nav>
-        </div>
+        <!-- <div class="header__iner">
+          <div class="header__logo">Погода в Измире</div>
+          <nav class="nav">
+            <a class="nav__link" href="#">На завтра</a>
+            <a class="nav__link" href="#">На неделю</a>
+            <a class="nav__link" href="#">О нас</a>
+          </nav>
+        </div> -->
       </div>
-   </div>
-
- </header>
-
-
-
-
-
-   <div class="intro">
-    <div class="container">
     </div>
-</div>
+
+  </header>
 
 
 
-
-
-   <div class="footer-legalese">
+  <div class="intro">
+    <div class="container"></div>
+  </div>
+  <div class="footer-legalese">
     <div class="footer-copyright">
-    <span>
-      © SamWEather, Inc., 2023 "SamWEather" и дизайн в виде солнца являются зарегистрированными товарными знаками SamWEather, Inc. Все права защищены.
-
-    </span>
-        <div class ="headen" style = "background-image: url(../img/nebo-oblaka-iasnaia-pogoda-solntse-priroda.jpg);"></div>
+      <span>
+        © SamWEather, Inc., 2023 "SamWEather" и дизайн в виде солнца являются зарегистрированными товарными знаками
+        SamWEather, Inc. Все права защищены.
+      </span>
+      <div class="headen" style="background-image: url(../img/nebo-oblaka-iasnaia-pogoda-solntse-priroda.jpg);"></div>
     </div>
 
 </body>
+
 </html>
